--- a/examples/webgl_loader_obj2_options.html
+++ b/examples/webgl_loader_obj2_options.html
@@ -64,7 +64,7 @@
 			import { OBJLoader2Parallel } from "./jsm/loaders/OBJLoader2Parallel.js";
 			import { LoadedMeshUserOverride } from "./jsm/loaders/obj2/shared/MeshReceiver.js";
 
-			import { TaskManager } from "./jsm/taskmanager/TaskManager.js";
+			import { WorkerTaskManager } from "./jsm/loaders/workerTaskManager/WorkerTaskManager.js";
 
 			const WWOBJLoader2Example = function ( elementToBindTo ) {
 
@@ -94,7 +94,7 @@
 				this.cube = null;
 				this.pivot = null;
 
-				this.taskManager = new TaskManager( 1 );
+				this.workerTaskManager = new WorkerTaskManager( 1 );
 			};
 
 			WWOBJLoader2Example.prototype = {
@@ -204,7 +204,7 @@
 					};
 
 					const objLoader2Parallel = new OBJLoader2Parallel()
-						.setTaskManager( this.taskManager )
+						.setWorkerTaskManager( this.workerTaskManager )
 						.setModelName( modelName )
 						.setJsmWorker( this.useJsmWorker, new URL( OBJLoader2Parallel.DEFAULT_JSM_WORKER_PATH, window.location.href ) )
 						.setCallbackOnLoad( callbackOnLoad )
@@ -271,7 +271,7 @@
 					this.pivot.add( local );
 
 					const objLoader2Parallel = new OBJLoader2Parallel()
-						.setTaskManager( this.taskManager )
+						.setWorkerTaskManager( this.workerTaskManager )
 						.setModelName( modelName )
 						.setJsmWorker( this.useJsmWorker, new URL( OBJLoader2Parallel.DEFAULT_JSM_WORKER_PATH, window.location.href ) );
 
@@ -306,7 +306,7 @@
 					this.pivot.add( local );
 
 					const objLoader2Parallel = new OBJLoader2Parallel()
-						.setTaskManager( this.taskManager )
+						.setWorkerTaskManager( this.workerTaskManager )
 						.setModelName( local.name )
 						.setExecuteParallel( false );
 
@@ -331,7 +331,7 @@
 					this.pivot.add( local );
 
 					const objLoader2Parallel = new OBJLoader2Parallel()
-						.setTaskManager( this.taskManager )
+						.setWorkerTaskManager( this.workerTaskManager )
 						.setModelName( local.name )
 						.setJsmWorker( this.useJsmWorker, new URL( OBJLoader2Parallel.DEFAULT_JSM_WORKER_PATH, window.location.href ) )
 						.setBaseObject3d( local );
