--- a/examples/webgl_loader_workertaskmanager.html
+++ b/examples/webgl_loader_workertaskmanager.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>three.js webgl - TaskManager prototype</title>
+		<title>three.js webgl - WorkerTaskManager prototype</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<link type="text/css" rel="stylesheet" href="main.css">
@@ -19,7 +19,7 @@
 	<body>
 		<canvas id="example" style="width: 100%; height: 100vh;"></canvas>
 		<div id="info">
-			<a href="http://threejs.org" target="_blank" rel="noopener">three.js</a> - TaskManager prototype
+			<a href="http://threejs.org" target="_blank" rel="noopener">three.js</a> - WorkerTaskManager prototype
 			<div id="feedback" style="color: darkorange"></div>
 		</div>
 		<div id="dat" />
@@ -32,17 +32,35 @@
 			import { GUI } from './jsm/libs/dat.gui.module.js';
 
 			import { TrackballControls } from "./jsm/controls/TrackballControls.js";
-			import { TaskManager } from "./jsm/taskmanager/TaskManager.js";
+			import { WorkerTaskManager } from "./jsm/loaders/workerTaskManager/WorkerTaskManager.js";
 			import { MeshReceiver } from "./jsm/loaders/obj2/shared/MeshReceiver.js";
-			import { ObjectManipulator } from  "./jsm/taskmanager/utils/TransferableUtils.js"
+			import { ObjectManipulator } from "./jsm/loaders/workerTaskManager/utils/TransferableUtils.js"
 			import { OBJLoader2Parser } from "./jsm/loaders/obj2/OBJLoader2Parser.js";
 			import { MaterialHandler } from "./jsm/loaders/obj2/shared/MaterialHandler.js";
-			import { TransferableUtils } from "./jsm/taskmanager/utils/TransferableUtils.js";
+			import { TransferableUtils } from "./jsm/loaders/workerTaskManager/utils/TransferableUtils.js";
 			import { FileLoader } from "../src/loaders/FileLoader.js";
-			import { OBJ2LoaderWorker } from "./jsm/taskmanager/worker/tmOBJLoader2.js";
+			import { OBJ2LoaderWorker } from "./jsm/loaders/workerTaskManager/worker/tmOBJLoader2.js";
 			import { MTLLoader } from "./jsm/loaders/MTLLoader.js";
 			import { MtlObjBridge } from "./jsm/loaders/obj2/bridge/MtlObjBridge.js";
 
+			/**
+			 * The aim of this example is to show all possible ways how to use the {@link WorkerTaskManager}:
+			 * - Standard Workers with dependency loading
+			 * - Module Workers with and without additional dependencies
+			 * - Main Fallback without dependencies
+			 * - It also allows to use OBJLoader2Parser with and without modules.
+			 *
+			 * Via dat.gui it is possible to control various parameters of the example:
+			 * - The quantity of workers created for each task (default: 4)
+			 * - The absolute overall count of task executions (default: 1000000)
+			 * - The maximum amount of task executions per loop (=number of promises returned, default: 1000)
+			 * - How many meshes shall be kept as otherwise the continuous loading will (default: 750)
+			 *
+			 * The tasks perform the same loading operation over and over again. This shall demonstrate:
+			 * - A good CPU utilization can be achieved permanently if the selected amount of workers match the logical CPUs available
+			 * - No memory is leaked
+			 * - The exmaple is able
+			 */
 			class TaskManagerPrototypeExample {
 
 				constructor ( elementToBindTo ) {
@@ -62,7 +80,7 @@
 					this.cameraTarget = this.cameraDefaults.posCameraTarget;
 					this.controls = null;
 
-					this.taskManager = null;
+					this.workerTaskManager = null;
 					this.materialHandler = null;
 					this.meshReceiver = null;
 
@@ -91,8 +109,8 @@
 				}
 
 				resetAppContext () {
-					this.taskManager = new TaskManager();
-					this.taskManager.setVerbose( true );
+					this.workerTaskManager = new WorkerTaskManager();
+					this.workerTaskManager.setVerbose( true );
 
 					this.materialHandler = new MaterialHandler();
 					this.materialHandler.createDefaultMaterials( true );
@@ -106,39 +124,39 @@
 						name: 'tmProtoExample',
 						use: true,
 						fallback: false,
-						funcInit: WorkerFunctions.workerLegacyInit,
-						funcExec: WorkerFunctions.workerLegacyExec
+						funcInit: WorkerFunctions.workerStandardInit,
+						funcExec: WorkerFunctions.workerStandardExec
 					} );
 					this.taskDescriptions.set( 'tmProtoExampleModule', {
 						name: 'tmProtoExampleModule',
 						use: true,
 						fallback: false,
-						module: './jsm/taskmanager/worker/tmModuleExample.js'
+						module: './jsm/loaders/workerTaskManager/worker/tmModuleExample.js'
 					} );
 					this.taskDescriptions.set( 'tmProtoExampleModuleNoThree', {
 						name: 'tmProtoExampleModuleNoThree',
 						use: true,
 						fallback: false,
-						module: './jsm/taskmanager/worker/tmModuleExampleNoThree.js'
+						module: './jsm/loaders/workerTaskManager/worker/tmModuleExampleNoThree.js'
 					} );
 					this.taskDescriptions.set( 'tmProtoExampleMain', {
 						name: 'tmProtoExampleMain',
 						use: true,
 						fallback: true,
-						funcInit: WorkerFunctions.workerLegacyInit,
-						funcExec: WorkerFunctions.workerLegacyExec
+						funcInit: WorkerFunctions.workerStandardInit,
+						funcExec: WorkerFunctions.workerStandardExec
 					} );
 					this.taskDescriptions.set( 'tmOBJLoader2', {
 						name: 'tmOBJLoader2',
 						use: true,
 						fallback: false,
-						module: './jsm/taskmanager/worker/tmOBJLoader2.js',
+						module: './jsm/loaders/workerTaskManager/worker/tmOBJLoader2.js',
 						filenameMtl: './models/obj/female02/female02.mtl',
 						filenameObj: './models/obj/female02/female02.obj',
 						materials: {}
 					} );
-					this.taskDescriptions.set( 'tmOBJLoader2Legacy', {
-						name: 'tmOBJLoader2Legacy',
+					this.taskDescriptions.set( 'tmOBJLoader2Standard', {
+						name: 'tmOBJLoader2Standard',
 						use: true,
 						fallback: false,
 						funcInit: OBJ2LoaderWorker.init,
@@ -209,6 +227,11 @@
 					this.scene.add( helper );
 				}
 
+				/**
+				 * Registers any selected task at the {@link WorkerTaskManager} and initializes them.
+				 *
+				 * @return {Promise<any>}
+				 */
 				async initContent () {
 					let awaiting = [];
 					this.tasksToUse = [];
@@ -216,16 +239,16 @@
 					if ( taskDescr.use ) {
 
 						this.tasksToUse.push( taskDescr );
-						this.taskManager.registerTaskType( taskDescr.name, taskDescr.funcInit, taskDescr.funcExec, null, false, [ { url: "../build/three.js" } ] );
-						awaiting.push( this.taskManager.initTaskType( taskDescr.name, { param1: 'param1value' } ).catch( e => console.error( e ) ) );
+						this.workerTaskManager.registerTaskType( taskDescr.name, taskDescr.funcInit, taskDescr.funcExec, null, false, [ { url: "../build/three.js" } ] );
+						awaiting.push( this.workerTaskManager.initTaskType( taskDescr.name, { param1: 'param1value' } ).catch( e => console.error( e ) ) );
 
 					}
 					taskDescr = this.taskDescriptions.get( 'tmProtoExampleModule' );
 					if ( taskDescr.use ) {
 
 						this.tasksToUse.push( taskDescr );
-						this.taskManager.registerTaskTypeModule( taskDescr.name, taskDescr.module );
-						awaiting.push( this.taskManager.initTaskType( taskDescr.name, { param1: 'param1value' } ).catch( e => console.error( e ) ) );
+						this.workerTaskManager.registerTaskTypeModule( taskDescr.name, taskDescr.module );
+						awaiting.push( this.workerTaskManager.initTaskType( taskDescr.name, { param1: 'param1value' } ).catch( e => console.error( e ) ) );
 
 					}
 					taskDescr = this.taskDescriptions.get( 'tmProtoExampleModuleNoThree' );
@@ -234,42 +257,42 @@
 						let torus = new THREE.TorusBufferGeometry( 25, 8, 16, 100 );
 						let torusPayload = TransferableUtils.packageBufferGeometry( torus, '0', 'torus', 0 );
 						this.tasksToUse.push( taskDescr );
-						this.taskManager.registerTaskTypeModule( taskDescr.name, taskDescr.module );
-						awaiting.push( this.taskManager.initTaskType( taskDescr.name, torusPayload, torusPayload.transferables ).catch( e => console.error( e ) ) );
+						this.workerTaskManager.registerTaskTypeModule( taskDescr.name, taskDescr.module );
+						awaiting.push( this.workerTaskManager.initTaskType( taskDescr.name, torusPayload, torusPayload.transferables ).catch( e => console.error( e ) ) );
 
 					}
 					taskDescr = this.taskDescriptions.get( 'tmProtoExampleMain' );
 					if ( taskDescr.use ) {
 
 						this.tasksToUse.push( taskDescr );
-						this.taskManager.registerTaskType( taskDescr.name, taskDescr.funcInit, taskDescr.funcExec, null, true );
-						awaiting.push( this.taskManager.initTaskType( taskDescr.name, { param1: 'param1value' } ).catch( e => console.error( e ) ) );
+						this.workerTaskManager.registerTaskType( taskDescr.name, taskDescr.funcInit, taskDescr.funcExec, null, true );
+						awaiting.push( this.workerTaskManager.initTaskType( taskDescr.name, { param1: 'param1value' } ).catch( e => console.error( e ) ) );
 
 					}
 					taskDescr = this.taskDescriptions.get( 'tmOBJLoader2' );
 					if ( taskDescr.use ) {
 
 						this.tasksToUse.push( taskDescr );
-						this.taskManager.registerTaskTypeModule( taskDescr.name, taskDescr.module );
+						this.workerTaskManager.registerTaskTypeModule( taskDescr.name, taskDescr.module );
 						await this.loadObjMtl( taskDescr )
 							.then( buffer => {
 								let config = { buffer: buffer }
-								awaiting.push( this.taskManager.initTaskType( taskDescr.name, config, { buffer: buffer } ).catch( e => console.error( e ) ) );
+								awaiting.push( this.workerTaskManager.initTaskType( taskDescr.name, config, { buffer: buffer } ).catch( e => console.error( e ) ) );
 							} );
 
 					}
-					taskDescr = this.taskDescriptions.get( 'tmOBJLoader2Legacy' );
+					taskDescr = this.taskDescriptions.get( 'tmOBJLoader2Standard' );
 					if ( taskDescr.use ) {
 
 						this.tasksToUse.push( taskDescr );
 						let obj2ParserDep = OBJLoader2Parser.toString() + ';\n\n';
 						let objectManipulator = ObjectManipulator.toString() + ';\n\n';
-						this.taskManager.registerTaskType( taskDescr.name, taskDescr.funcInit, taskDescr.funcExec, null, false,
+						this.workerTaskManager.registerTaskType( taskDescr.name, taskDescr.funcInit, taskDescr.funcExec, null, false,
 								[ { code: obj2ParserDep }, { code: objectManipulator } ] );
 						await this.loadObjMtl( taskDescr )
 							.then( buffer => {
 								let config = { buffer: buffer }
-								awaiting.push( this.taskManager.initTaskType( taskDescr.name, config, { buffer: buffer } ).catch( e => console.error( e ) ) );
+								awaiting.push( this.workerTaskManager.initTaskType( taskDescr.name, config, { buffer: buffer } ).catch( e => console.error( e ) ) );
 							} );
 
 					}
@@ -305,6 +328,12 @@
 
 				}
 
+				/**
+				 * Once all tasks are initialized a number of tasks (maxPerLoop) are enqueued.
+				 * This is repeated a configured number of times (loopCount) or the abort flag is set.
+				 *
+				 * @return {Promise<void>}
+				 */
 				async executeWorkers () {
 
 					if ( this.tasksToUse.length === 0 ) throw "No Tasks have been selected. Aborting..."
@@ -313,11 +342,22 @@
 					let globalCount = 0;
 					let taskToUseIndex = 0;
 					for ( let j = 0; j < this.loopCount && !this.abort; j++ ) {
-						console.time( 'Completed ' + ( this.maxPerLoop + j * this.maxPerLoop ) );
 
+						console.time( 'Completed ' + ( this.maxPerLoop + j * this.maxPerLoop ) );
 						for ( let i = 0; i < this.maxPerLoop; i ++ ) {
 
-							this._storeAddTaskPromise( taskToUseIndex, globalCount );
+							let taskDescr = this.tasksToUse[ taskToUseIndex ];
+							let promise = this.workerTaskManager.enqueueForExecution( taskDescr.name, {
+									id: globalCount,
+									params: {
+										materials: taskDescr.materials
+									}
+								},
+								data => this._processMessage( data ) )
+									.then( data => this._processMessage( data ) )
+									.catch( e => console.error( e ) )
+							this.executions.push( promise );
+
 							globalCount++;
 							taskToUseIndex++;
 							if ( taskToUseIndex === this.tasksToUse.length ) taskToUseIndex = 0;
@@ -330,7 +370,7 @@
 
 						} );
 					}
-					this.taskManager.dispose();
+					this.workerTaskManager.dispose();
 					console.timeEnd( 'start' );
 
 					if ( this.reset ) {
@@ -338,22 +378,6 @@
 						this.resetAppContext();
 
 					}
-
-				}
-
-				_storeAddTaskPromise( taskNameIndex, globalCount ) {
-
-					let taskDescr = this.tasksToUse[ taskNameIndex ];
-					let promise = this.taskManager.enqueueForExecution( taskDescr.name, {
-							id: globalCount,
-							params: {
-									materials: taskDescr.materials
-								}
-							},
-							data => this._processMessage( data ) )
-						.then( data => this._processMessage( data ) )
-						.catch( e => console.error( e ) )
-					this.executions.push( promise );
 
 				}
 
@@ -503,7 +527,7 @@
 
 			const WorkerFunctions = {
 
-				workerLegacyInit: function ( context, id, config ) {
+				workerStandardInit: function ( context, id, config ) {
 					context.storage = {
 						whoami: config.id,
 					};
@@ -515,7 +539,7 @@
 
 				},
 
-				workerLegacyExec: function ( context, id, config ) {
+				workerStandardExec: function ( context, id, config ) {
 
 					let bufferGeometry = new THREE.SphereBufferGeometry( 40, 64, 64 );
 
@@ -579,8 +603,8 @@
 				tmProtoExampleModule: false,
 				tmProtoExampleModuleNoThree: false,
 				tmProtoExampleMain: false,
-				tmOBJLoader2: false,
-				tmOBJLoader2Legacy: false,
+				tmOBJLoader2Module: false,
+				tmOBJLoader2Standard: false,
 				maxParallelExecutions: 0,
 				overallExecutionCount: 0,
 				numberOfMeshesToKeep: 0,
@@ -591,9 +615,9 @@
 					this.tmProtoExampleModule = app.taskDescriptions.get( 'tmProtoExampleModule' ).use;
 					this.tmProtoExampleModuleNoThree = app.taskDescriptions.get( 'tmProtoExampleModuleNoThree' ).use;
 					this.tmProtoExampleMain = app.taskDescriptions.get( 'tmProtoExampleMain' ).use;
-					this.tmOBJLoader2 = app.taskDescriptions.get( 'tmOBJLoader2' ).use;
-					this.tmOBJLoader2Legacy = app.taskDescriptions.get( 'tmOBJLoader2Legacy' ).use;
-					this.maxParallelExecutions = app.taskManager.getMaxParallelExecutions();
+					this.tmOBJLoader2Module = app.taskDescriptions.get( 'tmOBJLoader2' ).use;
+					this.tmOBJLoader2Standard = app.taskDescriptions.get( 'tmOBJLoader2Standard' ).use;
+					this.maxParallelExecutions = app.workerTaskManager.getMaxParallelExecutions();
 					this.overallExecutionCount = app.overallExecutionCount;
 					this.numberOfMeshesToKeep = app.numberOfMeshesToKeep;
 					this.maxPerLoop = app.maxPerLoop;
@@ -668,13 +692,13 @@
 			let menuDiv = document.getElementById( 'dat' );
 			let gui = new GUI( {
 				autoPlace: false,
-				width: 320
+				width: 400
 			} );
 			menuDiv.appendChild( gui.domElement );
 
 			let taskName0 = 'tmProtoExample';
 			let index = 0;
-			tmControls.controls[ index ] = gui.add( tmControls, taskName0 + 'Name' ).name( 'Worker Legacy + three' );
+			tmControls.controls[ index ] = gui.add( tmControls, taskName0 + 'Name' ).name( 'Worker Standard + three' );
 			tmControls.controls[ index ].onChange( value => { app.taskDescriptions.get( taskName0 ).use = value; } );
 
 			let taskName1 = 'tmProtoExampleModule';
@@ -689,22 +713,22 @@
 
 			let taskName3 = 'tmProtoExampleMain';
 			index++;
-			tmControls.controls[ index ] = gui.add( tmControls, taskName3 ).name( 'Worker Legacy Main' );
+			tmControls.controls[ index ] = gui.add( tmControls, taskName3 ).name( 'Worker Standard Main' );
 			tmControls.controls[ index ].onChange( value => { app.taskDescriptions.get( taskName3 ).use = value; } );
 
-			let taskName4 = 'tmOBJLoader2';
+			let taskName4 = 'tmOBJLoader2Module';
 			index++;
-			tmControls.controls[ index ] = gui.add( tmControls, taskName4 ).name( 'OBJLoader2 Module' );
+			tmControls.controls[ index ] = gui.add( tmControls, taskName4 ).name( 'OBJLoader2Parser Module' );
 			tmControls.controls[ index ].onChange( value => { app.taskDescriptions.get( taskName4 ).use = value; } );
 
-			let taskName5 = 'tmOBJLoader2Legacy';
+			let taskName5 = 'tmOBJLoader2Standard';
 			index++;
-			tmControls.controls[ index ] = gui.add( tmControls, taskName5 ).name( 'OBJLoader2 Legacy' );
+			tmControls.controls[ index ] = gui.add( tmControls, taskName5 ).name( 'OBJLoader2Parser Standard' );
 			tmControls.controls[ index ].onChange( value => { app.taskDescriptions.get( taskName5 ).use = value; } );
 
 			index++;
 			tmControls.controls[ index ] = gui.add( tmControls, 'maxParallelExecutions', 1, 16 ).step( 1 ).name( 'Maximum Parallel Executions' );
-			tmControls.controls[ index ].onChange( value => { app.taskManager.setMaxParallelExecutions( value ) } );
+			tmControls.controls[ index ].onChange( value => { app.workerTaskManager.setMaxParallelExecutions( value ) } );
 
 			index++;
 			tmControls.controls[ index ] = gui.add( tmControls, 'overallExecutionCount', 0, 10000000 ).step( 1000 ).name( 'Overall Execution Count' );
